TestRepo2/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ControlEast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ControlWest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FranchiseEast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FranchiseWest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWSEast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWSWest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Call_Days__c</fullName>
        <label>Rep Call Days</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rep_Call_Hours__c</fullName>
        <label>Rep Call Hours</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SK3_Account_ID__c</fullName>
        <formula>New_Org_ID__c</formula>
        <label>SK3 Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Expiration_Date__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Serial_Number__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STATE_LICENSEE_NUMBER__c</fullName>
        <label>State Licensee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Demographic__c</fullName>
        <inlineHelpText>Is there a consistent secondary demographic at this on-premise account  (i.e. - regularly scheduled LGBT Night or general market restaurant from 5-9pm but hispanic nightclub after 9pm)?</inlineHelpText>
        <label>Secondary Demographic</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Demographics_Type__c</fullName>
        <inlineHelpText>&quot;What is the secondary demographic (choose one)?&quot;</inlineHelpText>
        <label>Secondary Demographics Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sector_Code__c</fullName>
        <label>Sector Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_with_Diageo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared with Diageo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Cust_Code__c</fullName>
        <label>Ship To Customer Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spectra_AfAm__c</fullName>
        <label>Spectra - AfAm</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spectra_Asian__c</fullName>
        <label>Spectra - Asian</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spectra_Hispanic__c</fullName>
        <label>Spectra - Hispanic</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spectra_White__c</fullName>
        <label>Spectra - White</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spirits_Cluster_Sales_Org_Desc__c</fullName>
        <label>Spirits Cluster Sales Org Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirits_Displays_Competitors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spirits Displays - Competitors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spirits_Displays_Diageo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spirits Displays - Diageo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spirits_Displays__c</fullName>
        <formula>Spirits_Displays_Diageo__c  / (Spirits_Displays_Diageo__c + Spirits_Displays_Competitors__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spirits Displays %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spirits_Division__c</fullName>
        <formula>IF(ISBLANK(Spirits_Hierarchy__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Label__c) = &quot;Division&quot;, Spirits_Hierarchy__r.Name, 
IF(ISBLANK(Spirits_Hierarchy__r.Parent__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Parent__r.Label__c) = &quot;Division&quot;, Spirits_Hierarchy__r.Parent__r.Name, 
IF(ISBLANK(Spirits_Hierarchy__r.Parent__r.Parent__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Parent__r.Parent__r.Label__c) = &quot;Division&quot;, Spirits_Hierarchy__r.Parent__r.Parent__r.Name, 
IF(ISBLANK(Spirits_Hierarchy__r.Parent__r.Parent__r.Parent__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Parent__r.Parent__r.Parent__r.Label__c) = &quot;Division&quot;, Spirits_Hierarchy__r.Parent__r.Parent__r.Parent__r.Name, &quot;&quot;))))))))</formula>
        <label>Spirits Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirits_Hierarchy_Location__c</fullName>
        <formula>Spirits_Hierarchy__r.Hierarchy_Location__c</formula>
        <label>Spirits Hierarchy Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirits_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spirits Hierarchy</label>
        <referenceTo>Organizational_Unit__c</referenceTo>
        <relationshipLabel>Accounts (Spirits Hierarchy)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spirits_Market__c</fullName>
        <formula>IF(ISBLANK(Spirits_Hierarchy__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Label__c) = &quot;Market&quot;, Spirits_Hierarchy__r.Name, &quot;&quot;))</formula>
        <label>Spirits Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirits_NRI_Category_Desc__c</fullName>
        <label>Spirits NRI Category Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirits_Region__c</fullName>
        <formula>IF(ISBLANK(Spirits_Hierarchy__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Label__c) = &quot;Region&quot;, Spirits_Hierarchy__r.Name, 
IF(ISBLANK(Spirits_Hierarchy__r.Parent__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Parent__r.Label__c) = &quot;Region&quot;, Spirits_Hierarchy__r.Parent__r.Name, 
IF(ISBLANK(Spirits_Hierarchy__r.Parent__r.Parent__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Parent__r.Parent__r.Label__c) = &quot;Region&quot;, Spirits_Hierarchy__r.Parent__r.Parent__r.Name, &quot;&quot;))))))</formula>
        <label>Spirits Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spirits_State_District__c</fullName>
        <formula>IF(ISBLANK(Spirits_Hierarchy__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Label__c) = &quot;State District&quot;, Spirits_Hierarchy__r.Name, 
IF(ISBLANK(Spirits_Hierarchy__r.Parent__c), &quot;&quot;, IF(TEXT(Spirits_Hierarchy__r.Parent__r.Label__c) = &quot;State District&quot;, Spirits_Hierarchy__r.Parent__r.Name, &quot;&quot;))))</formula>
        <label>Spirits State District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Training_Opportunity_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>&quot;Is this on premise account open to offering staff training?&quot;</inlineHelpText>
        <label>Staff Training Opportunity Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_District__c</fullName>
        <label>State District</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Mandated_for_Display_Division__c</fullName>
        <description>ONLY FOR OFF-PREMISE ACCOUNT RECORD TYPES</description>
        <inlineHelpText>Only for Off Premise Accounts</inlineHelpText>
        <label>State Mandated for Display Bev Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Mandated_for_Display_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>State Mandated for Display Execution (Y/N)</description>
        <label>State Mandated for Display Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Mandated_for_Shelf_Division__c</fullName>
        <description>State Mandated for Shelf Execution (Y/N)</description>
        <label>State Mandated for Shelf Bev Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Mandated_for_Shelf_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>State Mandated for Shelf Execution (Y/N)</description>
        <label>State Mandated for Shelf Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetMap_Survey_Segment_Desc__c</fullName>
        <label>Street Map Survey Segment Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Beer_Ind_Desc__c</fullName>
        <label>TDLINX Beer Ind Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Chain_Ind_Desc__c</fullName>
        <label>TDLINX Chain Ind Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Food_Type_Desc__c</fullName>
        <label>TDLINX Food Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Franchise_Ind_Desc__c</fullName>
        <label>TDLINX Franchise Ind Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Liquor_Ind_Desc__c</fullName>
        <label>TDLINX Liquor Ind Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_On_Prem_Ind_Desc__c</fullName>
        <label>TDLINX On Prem Ind Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Outlet_Status_Desc__c</fullName>
        <label>TDLINX Outlet Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Outlet_Volume_Desc__c</fullName>
        <label>TDLINX Outlet Volume Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Outlet__c</fullName>
        <label>TDLINX_Outlet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Sector__c</fullName>
        <label>TDLINX Sector Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Sub_Channel__c</fullName>
        <label>TDLINX Sub Channel Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Trade_Channel__c</fullName>
        <label>TDLINX Trade Channel Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLINX_Wine_Ind_Desc__c</fullName>
        <label>TDLINX Wine Ind Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLinx_Outlet_Desc__c</fullName>
        <label>TDLinx Outlet Volume Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLinx_Phone_Number__c</fullName>
        <description>TDLinx Phone Number</description>
        <label>TDLinx Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TD_Linx_Code__c</fullName>
        <externalId>true</externalId>
        <label>TD Linx Code</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tamaron_Survey__c</fullName>
        <label>Tamaron Survey Top Regional Report</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tasting_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tasting Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Volume__c</fullName>
        <label>Total Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Opportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vodka_Menu_Competitors__c</fullName>
        <inlineHelpText>Enter the number of cocktails containing vodka on the menu</inlineHelpText>
        <label>Vodka Menu - Competitors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vodka_Menu_Diageo__c</fullName>
        <inlineHelpText>Enter the number of cocktails containing vodka on the menu</inlineHelpText>
        <label>Vodka Menu - Diageo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vodka_Menu__c</fullName>
        <formula>Vodka_Menu_Diageo__c  / ( Vodka_Menu_Diageo__c +  Vodka_Menu_Competitors__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vodka Menu %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wine_Displays_Competitors__c</fullName>
        <label>Wine Displays - Competitors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wine_Displays_Diageo__c</fullName>
        <label>Wine Displays - Diageo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wine_Displays__c</fullName>
        <formula>Wine_Displays_Diageo__c  / ( Wine_Displays_Diageo__c +  Wine_Displays_Competitors__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wine Displays %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wine_Hierarchy_Location__c</fullName>
        <formula>Wine_Hierarchy__r.Hierarchy_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wine Hierarchy Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wine_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wine Hierarchy</label>
        <referenceTo>Organizational_Unit__c</referenceTo>
        <relationshipLabel>Accounts (Wine Hierarchy)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wine_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>&quot;Does this on-premise account have a branded wine-specific list/menu?&quot;</inlineHelpText>
        <label>Wine List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wine_Menu_Competitors__c</fullName>
        <inlineHelpText>Enter the number of wines by the glass on the menu</inlineHelpText>
        <label>Wine Menu - Competitors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wine_Menu_Diageo__c</fullName>
        <inlineHelpText>Enter the number of wines by the glass on the menu</inlineHelpText>
        <label>Wine Menu - Diageo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wine_Menu__c</fullName>
        <formula>Wine_Menu_Diageo__c  / ( Wine_Menu_Diageo__c +  Wine_Menu_Competitors__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wine Menu %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wines_Division__c</fullName>
        <formula>IF(ISBLANK(Wine_Hierarchy__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Label__c) = &quot;Division&quot;, Wine_Hierarchy__r.Name, 
IF(ISBLANK(Wine_Hierarchy__r.Parent__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Parent__r.Label__c) = &quot;Division&quot;, Wine_Hierarchy__r.Parent__r.Name, 
IF(ISBLANK(Wine_Hierarchy__r.Parent__r.Parent__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Parent__r.Parent__r.Label__c) = &quot;Division&quot;, Wine_Hierarchy__r.Parent__r.Parent__r.Name, 
IF(ISBLANK(Wine_Hierarchy__r.Parent__r.Parent__r.Parent__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Parent__r.Parent__r.Parent__r.Label__c) = &quot;Division&quot;, Wine_Hierarchy__r.Parent__r.Parent__r.Parent__r.Name, &quot;&quot;))))))))</formula>
        <label>Wines Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wines_Market__c</fullName>
        <formula>IF(ISBLANK(Wine_Hierarchy__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Label__c) = &quot;Market&quot;, Wine_Hierarchy__r.Name, &quot;&quot;))</formula>
        <label>Wines Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wines_Region__c</fullName>
        <formula>IF(ISBLANK(Wine_Hierarchy__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Label__c) = &quot;Region&quot;, Wine_Hierarchy__r.Name, 
IF(ISBLANK(Wine_Hierarchy__r.Parent__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Parent__r.Label__c) = &quot;Region&quot;, Wine_Hierarchy__r.Parent__r.Name, 
IF(ISBLANK(Wine_Hierarchy__r.Parent__r.Parent__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Parent__r.Parent__r.Label__c) = &quot;Region&quot;, Wine_Hierarchy__r.Parent__r.Parent__r.Name, &quot;&quot;))))))</formula>
        <label>Wines Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wines_State_District__c</fullName>
        <formula>IF(ISBLANK(Wine_Hierarchy__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Label__c) = &quot;State District&quot;, Wine_Hierarchy__r.Name, 
IF(ISBLANK(Wine_Hierarchy__r.Parent__c), &quot;&quot;, IF(TEXT(Wine_Hierarchy__r.Parent__r.Label__c) = &quot;State District&quot;, Wine_Hierarchy__r.Parent__r.Name, &quot;&quot;))))</formula>
        <label>Wines State District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccountsDIAGEO</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>State_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>DIAGEO</value>
        </filters>
        <label>All - DIAGEO only</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts_Franchise</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>State_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Franchise</value>
        </filters>
        <label>All Accounts-Franchise</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts_Glazers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Spirits_Division__c</columns>
        <columns>Spirits_Region__c</columns>
        <columns>Spirits_State_District__c</columns>
        <columns>Spirits_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Spirits_Division__c</field>
            <operation>equals</operation>
            <value>Glazers</value>
        </filters>
        <label>All Accounts-Glazers</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts_Independent</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>State_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Independent</value>
        </filters>
        <label>All Accounts-Independent</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts_SWS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Spirits_Division__c</columns>
        <columns>Spirits_Region__c</columns>
        <columns>Spirits_State_District__c</columns>
        <columns>Spirits_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Spirits_Division__c</field>
            <operation>equals</operation>
            <value>SWS</value>
        </filters>
        <label>All Accounts-SWS</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Charmer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Division__c</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>State_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Charmer</value>
        </filters>
        <label>All Accounts-Charmer</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Control</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>State_District__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Control</value>
        </filters>
        <label>All Accounts-Control</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>MarketingDirectors191001</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Franchise</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Off_Premise</value>
        </filters>
        <label>All Accounts - Franchise</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
            <role>President</role>
            <role>Sales_Analytics_Manager_East</role>
            <role>Sales_Analytics_Manager_West</role>
            <role>Sales_Director_East</role>
            <role>Sales_Director_West</role>
            <role>Sales_Manager_East_CT</role>
            <role>Sales_Manager_East_NJ</role>
            <role>Sales_Manager_West</role>
            <role>Sales_Specialist_East_NJ</role>
            <role>Senior_Vice_President_East</role>
            <role>Senior_Vice_President_West</role>
            <role>subposition</role>
        </sharedTo>
    </listViews>
</CustomObject>